# pv-forecast-app

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  database.py  geocoding.py  main.py  models.py  pv_economics_api_models.py
backend/pv_economics/: README.md  __init__.py  defaults.py  degradation.py  economics.py  eeg.py  load_profiles.py  models.py  projection.py  pv_generation.py  pvgis.py  sensitivity.py  simulation.py  warnings.py  weather.py
backend/services/: __init__.py  open_meteo.py  (+2 more)
frontend/: __init__.py  api_errors.py  app.py  export_data.py  forecast_response.py  installation_display.py  plant_display.py  session_identity.py  time_display.py  weather_display.py
runtime-data/: README.md
scripts/: convert_bdew_h25.py  verify_bdew_h25.py
tests/: __init__.py  test_api.py  test_api_errors.py  test_bdew_h25_converter.py  test_bdew_h25_data.py  test_bdew_h25_preflight.py  test_degradation.py  test_economic_projection.py  test_eeg_tariff.py  test_export_data.py  test_feed_in_limit.py  test_forecast_response.py  test_installation_display.py  test_load_profiles.py  test_open_meteo.py  test_plant_display.py  test_pv_economics.py  test_pv_economics_api.py  test_pv_economics_warnings.py  test_pv_forecast.py  test_pv_generation.py  test_pv_weather_sensitivity.py  test_pvgis_historical.py  test_pvgis_tmy.py  test_session_identity.py  test_time_display.py  test_weather_display.py
web/: .env.example  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+34 files in other folders)
